clang/test/BSC/Negative/ParamCheck/this_double_borrow_error/this_double_borrow_error.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

#include <float.h>
#include <limits.h>

owned struct S {
    double *_Borrow a3; // contain _Borrow 
public:
    int a1;
    char a2;

    // Case 1: *_Borrow this
    int foo(const S *_Borrow this, int b1, char b2, double *_Borrow b3) { // expected-error {{type of this_pointer cannot qualified by '_Borrow'(even indirectly), 'const owned struct S' contains '_Borrow' type}}
        if(this->a1 == b1 && this->a2 == b2 && *this->a3 == *b3) {
            return 0;
        }
        return 1;
    }

    // Case 2: * this
    int bar(const S * this) {
        return 0;
    }
};

int main() {
    return 0;
}